// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateProfileView renders UpdateProfileView with desktop view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-dQemvk eeThTR"
      >
        <div
          class="sc-bCDiRt hSyFex"
        >
          <div
            class="sc-beqWNU hnIjJd"
            style="font-weight: 600;"
          >
            Profile
          </div>
          <div
            class="sc-gueXAH gRHGwY"
          >
            You're logged in as 
            <div
              class="sc-gueXAH gRHGwY"
              style="font-weight: bold;"
            >
              email
            </div>
          </div>
        </div>
        <form
          class=""
          style="display: flex; flex-direction: column; align-items: center;"
        >
          <div
            id="file"
          >
            <div
              class="mb-4 text-center"
            />
            <div
              class="sc-gueXAH gRHGwY"
              style="padding: 8px 0px;"
            >
              Avatar
            </div>
            <input
              class="form-control"
              type="file"
            />
          </div>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="update-avatar-button"
            disabled=""
            style="margin-top: 8px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
            type="button"
          >
            Update Avatar
          </button>
        </form>
        <div
          style="margin-bottom: 8px; margin-top: 32px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
          >
            Full name
          </div>
          <input
            aria-label="Full name"
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter your full name..."
            style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
            type="text"
            value="displayName"
          />
        </div>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="update-button"
          disabled=""
          style="margin-top: 8px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
          type="button"
        >
          Update
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-dQemvk eeThTR"
    >
      <div
        class="sc-bCDiRt hSyFex"
      >
        <div
          class="sc-beqWNU hnIjJd"
          style="font-weight: 600;"
        >
          Profile
        </div>
        <div
          class="sc-gueXAH gRHGwY"
        >
          You're logged in as 
          <div
            class="sc-gueXAH gRHGwY"
            style="font-weight: bold;"
          >
            email
          </div>
        </div>
      </div>
      <form
        class=""
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div
          id="file"
        >
          <div
            class="mb-4 text-center"
          />
          <div
            class="sc-gueXAH gRHGwY"
            style="padding: 8px 0px;"
          >
            Avatar
          </div>
          <input
            class="form-control"
            type="file"
          />
        </div>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="update-avatar-button"
          disabled=""
          style="margin-top: 8px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
          type="button"
        >
          Update Avatar
        </button>
      </form>
      <div
        style="margin-bottom: 8px; margin-top: 32px;"
      >
        <div
          class="sc-gueXAH gRHGwY"
        >
          Full name
        </div>
        <input
          aria-label="Full name"
          class="sc-iAEzLF gTKcTi"
          placeholder="Enter your full name..."
          style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
          type="text"
          value="displayName"
        />
      </div>
      <button
        buttontype="primary"
        class="sc-gLDymS dItXMH"
        data-testid="update-button"
        disabled=""
        style="margin-top: 8px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
        type="button"
      >
        Update
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UpdateProfileView renders UpdateProfileView with mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-dQemvk eeThTR"
      >
        <div
          class="sc-bCDiRt QpqjE"
        >
          <div
            class="sc-beqWNU hnIjJd"
            style="font-weight: 600;"
          >
            Profile
          </div>
          <div
            class="sc-gueXAH gRHGwY"
          >
            You're logged in as 
            <div
              class="sc-gueXAH gRHGwY"
              style="font-weight: bold;"
            >
              email
            </div>
          </div>
        </div>
        <form
          class=""
          style="display: flex; flex-direction: column; align-items: center;"
        >
          <div
            id="file"
          >
            <div
              class="mb-4 text-center"
            />
            <div
              class="sc-gueXAH gRHGwY"
              style="padding: 8px 0px;"
            >
              Avatar
            </div>
            <input
              class="form-control"
              type="file"
            />
          </div>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            data-testid="update-avatar-button"
            style="margin-top: 8px; margin-bottom: 16px; width: 320px;"
            type="button"
          >
            Update Avatar
          </button>
        </form>
        <div
          style="margin-bottom: 8px; margin-top: 32px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
          >
            Full name
          </div>
          <input
            aria-label="Full name"
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter your full name..."
            style="min-height: 48px; min-width: 320px; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
            type="text"
            value="displayName"
          />
        </div>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="update-button"
          style="margin-top: 8px; margin-bottom: 16px; width: 320px;"
          type="button"
        >
          Update
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-dQemvk eeThTR"
    >
      <div
        class="sc-bCDiRt QpqjE"
      >
        <div
          class="sc-beqWNU hnIjJd"
          style="font-weight: 600;"
        >
          Profile
        </div>
        <div
          class="sc-gueXAH gRHGwY"
        >
          You're logged in as 
          <div
            class="sc-gueXAH gRHGwY"
            style="font-weight: bold;"
          >
            email
          </div>
        </div>
      </div>
      <form
        class=""
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div
          id="file"
        >
          <div
            class="mb-4 text-center"
          />
          <div
            class="sc-gueXAH gRHGwY"
            style="padding: 8px 0px;"
          >
            Avatar
          </div>
          <input
            class="form-control"
            type="file"
          />
        </div>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          data-testid="update-avatar-button"
          style="margin-top: 8px; margin-bottom: 16px; width: 320px;"
          type="button"
        >
          Update Avatar
        </button>
      </form>
      <div
        style="margin-bottom: 8px; margin-top: 32px;"
      >
        <div
          class="sc-gueXAH gRHGwY"
        >
          Full name
        </div>
        <input
          aria-label="Full name"
          class="sc-iAEzLF gTKcTi"
          placeholder="Enter your full name..."
          style="min-height: 48px; min-width: 320px; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
          type="text"
          value="displayName"
        />
      </div>
      <button
        buttontype="primary"
        class="sc-gLDymS dItXMH"
        data-testid="update-button"
        style="margin-top: 8px; margin-bottom: 16px; width: 320px;"
        type="button"
      >
        Update
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
